# nsu

./: DirBusterReport-vim.tasks.nsuctf.ru-443.txt  HR2_22201_Столяров.docx  HTTP Request open main page.jmx  P-regulator.cir  PI-regulator.cir  PI-regulator1.cir  PI-regulator_report.docx  PID-regulator.cir  PID-regulator_custom.cir  PID-regulator_descent.cir  README.md  add_data.sql  add_numbers.cpp  add_numbers.py  auto_tcp  circuit3.cir  db.odb  hw  input  lab2.sci  lab3_PI.ANO  lab3_PI.CIR  lab3_PI.bak_CIR  lab3_PID.ANO  lab3_PID.CIR  lab3_PID.bak_CIR  lab3_PID_Bode.ANO  lab3_PID_Bode.CIR  lab3_PID_Bode.bak_CIR  lab3_PID_Bode_CIR.inx  lab3_PID_CIR.inx  lab3_PI_Bode.ANO  lab3_PI_Bode.CIR  lab3_PI_Bode.bak_CIR  lab3_PI_Bode_CIR.inx  lab3_PI_CIR.inx  lab3_calculations.py  lab4.sci  lab4_PID.cir  lab4_cir.cir  (+11 more)
ADC/ADC/: main.asm
CarFactory/: pom.xml
Computer_store/: Database ER diagram (crow's foot).pdfZone.Identifier  notes  Задание1.odb  Компьютерный магазин. Отчёт..docx
Computer_store/scripts/: ins_data.sql
Conway'sGameOfLife/: CMakeLists.txt  Основы ООП - Задача 2 (Жизнь).docx
algebraic_expr_to_rational_function/: main.lingo
algos/lab1-2/: main.c
asymmetric_crypto/: t.py
bit_array/: CMakeLists.txt  bitarray.cpp  main.cpp
bit_array/tests/: CMakeLists.txt
calculator/: calculatorGrammar.flow  sem.flow
command_line/command_line/: main.asm
comp_math/: README.md
comp_math/cubic_equation_solver/: QuadraticEquation.hpp  README.md  SegmentSolution.cpp  main.cpp
cpu_cache/: main.cpp
csharp/: README.md
csharp/generic_host/: .gitignore  README.md  generic_host.sln  run.ps1
csharp/multithreaded_simulation/: .gitignore  README.md  multithreaded_simulation.sln
csharp/single_threaded/: .gitignore  README.md  run.ps1  single_threaded.sln
cubic_equation_solver/: CubicEquationSolver.cpp  CubicEquationSolver.hpp  Makefile  QuadraticEquation.cpp  SegmentSolution.cpp  SegmentSolution.hpp  input  main.cpp
dadata/: postman_script.js
data/: cr_db.sql  hr_scripts.sql
db/: HR1_22201_Столяров.docx  README.md
db/Computer_store/: computer_store_queries.sql  Задание1.odb  Компьютерный магазин. Отчёт..docx  задание1.drawio
db/hr2/: 10.sql  12.sql  14.sql  15.sql  4.sql  5.sql  6.sql  8.sql
differentiation/: main.flow  util.flow
division/division/: main.asm
elteh/: README.md
encodings/: decode.py  encoded_msg  flag.txt  getflag.sh
epsmim/: README.md
epsmim/lab1/: CMakeLists.txt
epsmim/lab2/: roofline.html
epsmim/lab3/: CMakeLists.txt  report.odt
epsmim/lab3/src/: 3_rows.cpp
epsmim/lab4/: CMakeLists.txt
epsmim/lab4/src/: first.cpp  second.cpp  third.cpp  tmp.cpp
evm/: README.md
evm/blas/: inverse_blas.h  inverse_fast.cpp
evm/cache_associativity/: main.cpp
evm/cpu_cache/: CMakeLists.txt  main.cpp
evm/lab5/: CMakeLists.txt
evm/lab6/: main.cpp
evm/lab7/: main.cpp
extended_calculator/: main.flow  main.lingo
file_action/src/: actions.c  main.c  util.h
find_matching_indeces/: findIndeces.flow
hr2/: 1.sql  11.sql  13.sql  16.sql  2.sql  3.sql  7.sql  9.sql
infosec/: README.md
infosec/symmetric_crypto/: encrypted.tar
interrupt_handler/interrupt_handler/: main.asm
keyboard/: Device.sim1
lab1/: CMakeLists.txt  lab1.cpp  main.cpp  report.odt
lab2/: CMakeLists.txt  report.odt
lab2/src/: lab2.cpp  lab2.s  lab2_intrinsics.cpp
lab3/: roofline.html
lab4/: report.odt
lab5/: main.cpp
lab6/: CMakeLists.txt
lab7/: CMakeLists.txt  inverse_blas.cpp  inverse_fast.h  inverse_matrix.cpp  inverse_matrix.h  inversion_test.cpp
linking/: hello.c
matrix_mul_MPI_2D_grid/: main.cpp  util.cpp
microcontrollers/: README.md
microcontrollers/10-byte_string_send_recv/: main.sim1
microcontrollers/ADC/: main.sim1
microcontrollers/command_line/: main.sim1
microcontrollers/eeprom/: main.sim1
microcontrollers/send_recv_byte/: main.sim1
microcontrollers/timer_counter/: main.sim1
module_interpolation_convergence/: Makefile  NewtonPolynomial.cpp  NewtonPolynomial.hpp  convergence_plot.csv  divergence_plot.csv  main.cpp  main.py
mpi_solving_a_system_of_linear_quations/: clock_runtime  duplicated.cpp  run  scattered.cpp  visualize.py
mtk/: README.md
mtk/algebraic_expr_to_rational_function/: main.flow
mtk/calculator/: sem.debug
mtk/reverse_polish_notation/: main.flow  main.lingo
oop/: README.md
oop/bit_array/: bitarray.h
oop/sound_processor/: Help.cpp  Основы ООП - Задача 3 (Sound Processor).docx
oop/stack_calculator/: pom.xml
opp/MPI_Jacobi_method_3D_grid/: graphs.ods  main.cpp
opp/matrix_mul_MPI_2D_grid/: util.h
opp/mpi_solving_a_system_of_linear_quations/: Makefile  stats.ods
os/: README.md
os/linking/: d_lib.c  (+2 more)
otu/: P-regulator.cir  PI-regulator1.cir  PI-regulator_report.docx  PID-regulator_report.docx  README.md  lab3_PI.CIR  lab3_PI_Bode.CIR  script.py
prisoners_dilemma/: CMakeLists.txt
prisoners_dilemma/src/app/: CMakeLists.txt  main.cpp  prisoners_dilemma.cpp  prisoners_dilemma.hpp
prisoners_dilemma/src/strategies/always_cooperate/: CMakeLists.txt
prisoners_dilemma/src/strategies/tit_for_tat/: CMakeLists.txt
process_addres_space/: main.c
processors_asm/: main.s
proxy/: logger.h  main.c  proxy  proxy.h  thread_pool.c  thread_pool.h
reverse_basics/: main.c  main.py  task.ko
ris/: README.md
selfcopy_detector/: main.py  selfCopyDetector.py  self_copy_detector.py  task
shared_resource_competitive_access/: queue-example  queue.h
simple_rational_function/: main.flow  util.flow
sound_processor/: CMakeLists.txt  Help.h  main.cpp
spi/: master.asm  slave.asm  spi.sim1
sudoku/: pom.xml
task/: Задание1.odb
tcp_echo_server/: client.c
template_csv_parser/: CMakeLists.txt  gaz.csv  main.cpp  printTuple.h  simpleCSVParser.cpp  simpleCSVParser.h
teorkod/: main.py
text_to_csv/: main.cpp  util.cpp  util.h
thread_safe_queue/: CMakeCache.txt  CMakeLists.txt  Makefile  Task.cpp  Task.hpp  main.cpp
thread_safe_queue/src/: queue_semaphore.h
udp_echo_server/: client.c
university_library_project/: er-model.drawio
upprpo/: README.md
vulnerabilities/: clean.py  main.py
(+279 files in other folders)
